# api/src/controllers/message_controller.ts
@@ -1,16 +1,20 @@
-import { Route, Tags, Path, Get, Post, Body, Request, Security } from 'tsoa';
+import { Route, Tags, Path, Get, Post, Body, Request, Security, Query } from 'tsoa';
 
 import { AuthedRequest } from '../infrastructure/server/middlewares/authentication_middleware';
 import { ObjectId } from 'mongodb';
 import { getChat, sendMessage } from '../services/chats';
+
+type TextBody = {
+	text: string;
+};
 
 @Route('message')
 @Tags('Message')
 export class MessageController {
 	@Get('/')
 	@Security('jwt')
-	public async getChat(@Request() request: AuthedRequest) {
-		return await getChat(request.user);
+	public async getChat(@Request() request: AuthedRequest, @Query() forceReset?: boolean) {
+		return await getChat(request.user, forceReset);
 	}
 
 	@Post('/{chatId}')
@@ -18,8 +22,8 @@ export class MessageController {
 	public async sendMessage(
 		@Request() request: AuthedRequest,
 		@Path() chatId: string,
-		@Body() text: string,
+		@Body() body: TextBody,
 	) {
-		return await sendMessage(request.user, new ObjectId(chatId), text);
+		return await sendMessage(request.user, new ObjectId(chatId), body.text);
 	}
 }
